# np-likeness-prediction

./: .gitignore  CLAUDE.md  README.md  api_server.py  pyproject.toml  train_natural.sh  train_synthetic.sh
notebooks/: np_likeness_analysis.ipynb  training_data_analysis.ipynb
scripts/: create_diverse_subset.py  inference.py  train.py
src/: data.py  model.py  utils.py
